# simple-talking-db

./: app.py  notes.txt  pyproject.toml  requirements.txt
